# inkwell

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish_inkwell_pypi.yaml
examples/: demo_layout_detection.ipynb
inkwell/: __init__.py
inkwell/api/: document.py  figure.py  file.py  page.py  table.py  text.py
inkwell/components/: __init__.py  document.py  elements.py  figure.py  image.py  layout.py  page.py  table.py  text.py  utils.py
inkwell/figure_extractor/: __init__.py  base.py  config.py  figure_extractor.py  figure_extractor_factory.py  minicpm_figure_extractor.py  openai_4o_mini_figure_extractor.py  phi3v_figure_extractor.py  prompts.py
inkwell/io/: __init__.py  input.py
inkwell/layout_detector/: __init__.py  base.py  detectron2_engine.py  dit_detector.py  faster_rcnn_detector.py  layout_detector.py  layout_factory.py  layoutlmv3_detector.py  paddle_detector.py  utils.py
inkwell/layout_detector/config/: cascade_dit_base.yml  faster_rcnn_detectron2_cfg.yml  layout_detector_configurations.yml
inkwell/layout_detector/dit/: __init__.py  backbone.py  beit.py  deit.py  rcnn_vl.py
inkwell/layout_detector/layoutlmv3/: __init__.py  backbone.py  beit.py
inkwell/models/: __init__.py  base.py  config.py  minicpm_model_loader_vllm.py  model_registry.py  models.py  models_config.yml  phi3_vision_model_loader.py  phi3_vision_model_loader_hf.py  phi3_vision_model_loader_vllm.py  qwen2_2b_vision_model_loader.py  qwen2_2b_vision_model_loader_vllm.py  utils.py
inkwell/ocr/: __init__.py  base.py  config.py  minicpm_ocr.py  ocr.py  ocr_config.yml  ocr_factory.py  openai_4o_mini_ocr.py  openai_ocr.py  paddle_ocr.py  phi3_ocr.py  prompts.py  qwen2_ocr.py  tesseract_ocr.py  utils.py
inkwell/pipeline/: __init__.py  fragment_processor.py  layout_processor.py  pipeline.py  pipeline_config.py  utils.py
inkwell/reading_order/: __init__.py  base.py  noop_reading_order_detector.py  reading_order_detector.py  reading_order_detector_factory.py
inkwell/table_detector/: __init__.py  base.py  config.py  config.yml  openai_table_extractor.py  paddle_table_extractor.py  phi3v_table_extractor.py  qwen2_ocr.py  qwen2_table_extractor.py  table_detector.py  table_detector_factory.py  table_transformer_detector.py  table_transformer_extractor.py  utils.py
inkwell/table_extractor/: __init__.py  base.py  config.py  config.yml  minicpm_table_extractor.py  openai_4o_mini_table_extractor.py  openai_table_extractor.py  paddle_table_extractor.py  phi3v_table_extractor.py  prompts.py  qwen2_table_extractor.py  table_extractor.py  table_extractor_factory.py  table_transformer_extractor.py  utils.py
inkwell/utils/: env_utils.py  error_handling.py  visualize.py
inkwell/utils/logging/: logging.yaml  logging_config.py
notebooks/: demo_layout_detection.ipynb  demo_ocr.ipynb  demo_pipeline.ipynb  demo_table_detection.ipynb
tensordoc/: __init__.py  layout_detector.py
tensordoc/components/: __init__.py  base.py  elements.py  image.py  layout.py  page.py  table.py  text.py
tensordoc/config/: layout_detector.yml  utils.py
tensordoc/io/: __init__.py  input.py
tensordoc/layout_detector/: __init__.py  base.py  base_layout_engine.py  detectron2_engine.py  dit_detector.py  faster_rcnn_detector.py  layout_detector.py  layoutlmv3_detector.py  utils.py
tensordoc/layout_detector/DiT/: __init__.py  backbone.py  deit.py
tensordoc/layout_detector/config/: cascade_layoutlmv3.yml  layout_detector.yml  layout_detector_configurations.yml  utils.py
tensordoc/ocr/: base.py  ocr.py
tensordoc/pipeline/: __init__.py  fragment_processor.py  pipeline.py  pipeline_config.py
tensordoc/table_detector/: __init__.py  base.py  config.yml  openai_table_extractor.py  phi3v_table_extractor.py  table_detector.py  table_detector_factory.py  table_transformer_detector.py  table_transformer_extractor.py  table_transformer_segmentation.py  utils.py
tensordoc/utils/: download.py  env_utils.py  visualize.py
test/: test_elements.py  test_env_utils.py  test_io.py  test_layout_detector.py  test_ocr.py  test_pipeline.py  test_table_detector.py  test_table_extractor.py  utils.py
(+15 files in other folders)
